--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,6 @@
 NEXUS_COMPOSE_HOME=~/nexus
-NEXUS_ROOT=/root
-NEXUS_ROOT_BIND=nexus_root
+# NEXUS_CONTAINER=
+# NEXUS_CONTAINER_ALIAS=
+# NEXUS_NETWORK=
+# NEXUS_ROOT=
+# NEXUS_ROOT_BIND=
