--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+#
+# Environment used by docker-compose
+#
 NEXUS_COMPOSE_HOME=~/nexus
 NEXUS_CONTAINER=nexus-prod_nexus
 NEXUS_CONTAINER_ALIAS=nexus
