--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 NEXUS_COMPOSE_HOME=~/nexus
 NEXUS_CONTAINER=nexus-prod_nexus
 NEXUS_CONTAINER_ALIAS=nexus
+NEXUS_DOCKERFILE=./Dockerfile
 NEXUS_NETWORK=nexus-prod_net
 NEXUS_ROOT=/root
 NEXUS_ROOT_BIND=nexus_root
