--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 #
 # Environment used by docker-compose
 #
-NEXUS_COMPOSE_HOME=~/nexus/node01
+NEXUS_COMPOSE_HOME=~/cb.nexus/node01
 NEXUS_CONTAINER=nexus-broadcast_node01
 NEXUS_NETWORK=nexus-broadcast_net
 NEXUS_CONTAINER_ALIAS=nexus-broadcast_node01
 NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
 NEXUS_ROOT=/root
 NEXUS_ROOT_BIND=nexus_root
-NEXUS_PORT_RNSAPI=127.0.0.1:4342
-NEXUS_PORT_WEB=127.0.0.1:4380
-NEXUS_PORT_JSONAPI=4381
+NEXUS_PORT_RNSAPI=4353
+NEXUS_PORT_WEB=127.0.0.1:4383
+NEXUS_PORT_JSONAPI=127.0.0.1:4343
