--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 #
+# git clone https://github.com/HarlekinSimplex/nexus.git
 # Environment used by docker-compose
 #
 NEXUS_COMPOSE_HOME=~/cb.nexus/node01
