--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 #
 # git clone https://github.com/HarlekinSimplex/nexus.git
 # Environment used by docker-compose
+# docker exec -it nexus-broadcast_node01 bash
+#
+# cd ; python3 nexus_server.py
 #
 NEXUS_COMPOSE_HOME=~/cb.nexus/node01
 NEXUS_CONTAINER=nexus-broadcast_node01
