--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #
-# git clone https://github.com/HarlekinSimplex/nexus.git
+# git clone https://github.com/HarlekinSimplex/nexus.git node01
 # Environment used by docker-compose
 # docker exec -it nexus-broadcast_node01 bash
 # cd ; python3 nexus_server.py
