--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 # git clone https://github.com/HarlekinSimplex/nexus.git node01
 # Environment used by docker-compose
 # docker exec -it nexus-broadcast_node01 bash
+# docker exec -it nexus-broadcast_node01 nomadnet
 # docker exec -it nexus-broadcast_node01 python3 /root/nexus_server.py
 # cd ; python3 nexus_server.py
 #
