--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@
 # docker exec -it nexus-broadcast_node01 python3 /root/nexus_server.py
 # cd ; python3 nexus_server.py
 #
-NEXUS_COMPOSE_HOME=~/cb.nexus/node01
+NEXUS_COMPOSE_HOME=~/bsb.nexus
 NEXUS_CONTAINER=nexus-broadcast_node01
 NEXUS_NETWORK=nexus-broadcast_net
 NEXUS_CONTAINER_ALIAS=nexus-broadcast_node01
-NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
+NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm
 NEXUS_ROOT=/root
 NEXUS_ROOT_BIND=nexus_root
 NEXUS_PORT_RNSAPI=4353
