--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 # docker exec -it nexus-broadcast_node01 bash
 # docker exec -it nexus-broadcast_node01 python3 /root/nexus_server.py
 # cd ; python3 nexus_server.py
+# docker exec -it nexus-broadcast_node01 python3 /root/Broadcast.py
 #
 NEXUS_COMPOSE_HOME=~/bsb.nexus
 NEXUS_CONTAINER=nexus-broadcast_node01
