Group first flight .....

--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@
 # cd ; python3 nexus_server.py
 # docker exec -it nexus-broadcast_node01 python3 /root/Broadcast.py
 #
-NEXUS_COMPOSE_HOME=~/bsb.nexus
+NEXUS_COMPOSE_HOME=~/bsb.nexus/node01
 NEXUS_CONTAINER=nexus-broadcast_node01
 NEXUS_NETWORK=nexus-broadcast_net
 NEXUS_CONTAINER_ALIAS=nexus-broadcast_node01
-NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm
+NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
 NEXUS_ROOT=/root
 NEXUS_ROOT_BIND=nexus_root
-NEXUS_PORT_RNSAPI=4353
-NEXUS_PORT_WEB=127.0.0.1:4383
-NEXUS_PORT_JSONAPI=127.0.0.1:4343
+NEXUS_PORT_RNSAPI=4351
+NEXUS_PORT_WEB=127.0.0.1:4381
+NEXUS_PORT_JSONAPI=127.0.0.1:4341
