Group first flight .....

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # cd ; python3 nexus_server.py
 # docker exec -it nexus-broadcast_node01 python3 /root/Broadcast.py
 #
-NEXUS_COMPOSE_HOME=~/bsb.nexus/node01
+NEXUS_COMPOSE_HOME=~/cb.nexus/node01
 NEXUS_CONTAINER=nexus-broadcast_node01
 NEXUS_NETWORK=nexus-broadcast_net
 NEXUS_CONTAINER_ALIAS=nexus-broadcast_node01
