--- a/bsbdock.reticulum_context/Dockerfile_reticulum2.1_linux-amd64
+++ b/bsbdock.reticulum_context/Dockerfile_reticulum2.1_linux-amd64
@@ -2,17 +2,15 @@
 # bsbdock/reticulum Dockerfile
 #
 # How to build this container:
-# docker buildx build --no-cache --tag bsbdock/reticulum .
+# docker buildx build --no-cache --tag bsbdock/nexus -f Dockerfile_nexus1.0_linux-amd64 .
 #
 # How to invoke a shell into this container:
-# docker run -it bsbdock/reticulum bash
+# docker run -it bsbdock/nexus bash
 #
 # How to run the reticulum stack as a service
-# docker run --rm --name reticulum-prod_rnsd -it bsbdock/reticulum
+# docker run --rm --name nexus-prod_nexus -it bsbdock/nexus
 #
-#FROM ubuntu
-#FROM debian:bookworm-slim
-FROM balenalib/raspberry-pi-debian:latest
+FROM debian:bookworm
 
 # Set timezone and interactive mode
 ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
@@ -22,22 +20,19 @@ RUN apt-get update
 RUN apt-get install tzdata
 
 # Install python and pip3
-#RUN apt install python
-RUN apt install python3-pip
-#RUN pip3 install pyserial --upgrade
-
-# Install RNode config utility
-#RUN pip3 install rnodeconf
-#RUN apt install unzip
+RUN apt -y install python3-pip
 
 # Install Reticulum stack and NomadNet messenger application
-RUN pip3 install nomadnet
+RUN pip3 install rns lxmf nomadnet rnodeconf
 
 # Install personal helper tools
 RUN apt -y install mc
 
 # Expose port for Reticulum server TCP Interface (disable as default) 
 EXPOSE 4242
+# Expose ports for Nexus Server Web and API Interface
+EXPOSE 4280
+EXPOSE 4281
 
-# Launch Reticulum service if not specified otherwise
+# Launch Nexus server on start
 CMD ["rnsd"]
