Update container creation

--- a/.env
+++ b/.env
@@ -1,19 +1,24 @@
 #
-# git clone https://github.com/HarlekinSimplex/nexus.git node01
 # Environment used by docker-compose
-# docker exec -it nexus-broadcast_node01 bash
-# docker exec -it nexus-broadcast_node01 nomadnet
-# docker exec -it nexus-broadcast_node01 python3 /root/nexus_server.py
-# cd ; python3 nexus_server.py
-# docker exec -it nexus-broadcast_node01 python3 /root/Broadcast.py
 #
-NEXUS_COMPOSE_HOME=~/cb.nexus/node01
-NEXUS_CONTAINER=nexus-broadcast_node01
-NEXUS_NETWORK=nexus-broadcast_net
-NEXUS_CONTAINER_ALIAS=nexus-broadcast_node01
+# git clone https://github.com/HarlekinSimplex/nexus.git node01
+# docker exec -it nexus-server_node01 bash
+# docker exec -it nexus-server_node01 nomadnet
+# docker exec -it nexus-server_node01 python3 /root/nexus_server.py
+#
+
+NEXUS_COMPOSE_HOME=~/bsb.nexus/node01
+NEXUS_CONTAINER=nexus-server_node01
+NEXUS_CONTAINER_ALIAS=nexus-server_node01
+
+# Dockerfile to use for docker-compose build
 NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
+#NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm
+
+# Container configuration
 NEXUS_ROOT=/root
 NEXUS_ROOT_BIND=nexus_root
+NEXUS_NETWORK=nexus-server_net
 NEXUS_PORT_RNSAPI=4351
 NEXUS_PORT_WEB=127.0.0.1:4381
 NEXUS_PORT_JSONAPI=127.0.0.1:4341
