Update container creation

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@
 # docker exec -it nexus-server_node01 python3 /root/nexus_server.py
 #
 
+# Change path to match your local installation
 NEXUS_COMPOSE_HOME=~/bsb.nexus/node01
 NEXUS_CONTAINER=nexus-server_node01
 NEXUS_CONTAINER_ALIAS=nexus-server_node01
