Update container creation

--- a/.env
+++ b/.env
@@ -2,8 +2,7 @@
 # Environment used by docker-compose
 #
 # git clone https://github.com/HarlekinSimplex/nexus.git node01
-# docker run --rm -it --name nexus-server_node01 -v "$(pwd)"/nexus_root:/root bsbdock/nexus rnstatus
-# docker run --rm -it --name nexus-server_node01 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /root/nexus_server.py
+# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /root/nexus_server.py
 # docker exec -it nexus-server_node01 bash
 # docker exec -it nexus-server_node01 nomadnet
 # docker exec -it nexus-server_node01 python3 /root/nexus_server.py
