Update container creation

--- a/bsbdock.nexus_context/Dockerfile_nexus1.0_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.0_linux-amd64
@@ -43,7 +43,7 @@ COPY start.sh /bsb
 RUN chmod ug+x /bsb/start.sh
 
 # Pull in NexusServer script
-COPY ../Nexus/NexusServer.py /bsb
+COPY ../Nexus/* /bsb
 RUN chmod ug+x /bsb/NexusServer.py
 
 # Launch Nexus server on start
