--- a/.env
+++ b/.env
@@ -24,3 +24,10 @@ NEXUS_NETWORK=nexus-server_net
 NEXUS_PORT_RNSAPI=4351
 NEXUS_PORT_WEB=127.0.0.1:4381
 NEXUS_PORT_JSONAPI=127.0.0.1:4341
+
+# Default server configuration
+NEXUS_CONFIG=
+NEXUS_PORT=4281
+NEXUS_ASPECT=server
+NEXUS_ROLE={\"c\":\"root\"}
+NEXUS_LONGPOLL=
