Update container creation

--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ NEXUS_PORT_JSONAPI=127.0.0.1:4341
 NEXUS_CONFIG=
 NEXUS_PORT=4281
 NEXUS_ASPECT=server
-NEXUS_ROLE={\"c\":\"root\"}
+NEXUS_ROLE="{\"c\":\"root\"}"
 NEXUS_LONGPOLL=
