Update container creation

--- a/bsbdock.nexus_context/Dockerfile_nexus1.0_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.0_linux-amd64
@@ -10,7 +10,6 @@
 # How to run the reticulum stack as a service
 # docker run --rm --name nexus-prod_nexus -it bsbdock/nexus
 #
-#FROM debian:bookworm
 FROM python:3.9
 
 # Set timezone and interactive mode
@@ -20,11 +19,11 @@ ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get install tzdata
 
-# Install python and pip3
+# Install pip3
 RUN apt -y install python3-pip
 
 # Install Reticulum stack and NomadNet messenger application
-RUN pip3 install rns lxmf nomadnet
+RUN pip3 install rns lxmf nomadnet rnodeconf
 
 # Install personal helper tools
 RUN apt -y install mc
