--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ NEXUS_CONTAINER=nexus-server_node01
 NEXUS_CONTAINER_ALIAS=nexus-server_node01
 
 # Dockerfile to use for docker-compose build
-NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
-#NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm
+#NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
+NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm-v7
 
 # Container configuration
 NEXUS_ROOT=/root
@@ -29,5 +29,5 @@ NEXUS_PORT_JSONAPI=127.0.0.1:4341
 NEXUS_CONFIG=
 NEXUS_PORT=4281
 NEXUS_ASPECT=server
-NEXUS_ROLE="{\"c\":\"root\"}"
+NEXUS_ROLE={"c":"root"}
 NEXUS_LONGPOLL=
