--- a/bsbdock.reticulum_context/Dockerfile_reticulum2.1_linux-arm-v7
+++ b/bsbdock.reticulum_context/Dockerfile_reticulum2.1_linux-arm-v7
@@ -10,9 +10,7 @@
 # How to run the reticulum stack as a service
 # docker run --rm --name reticulum-prod_rnsd -it bsbdock/reticulum
 #
-#FROM ubuntu
-#FROM debian:bookworm-slim
-FROM balenalib/raspberry-pi-debian:latest
+FROM python:3.9
 
 # Set timezone and interactive mode
 ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
@@ -21,22 +19,28 @@ ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get install tzdata
 
-# Install python and pip3
-#RUN apt install python
-RUN apt install python3-pip
-#RUN pip3 install pyserial --upgrade
+# Install pip3
+RUN apt -y install python3-pip
+RUN pip install --upgrade pip
 
-# Install RNode config utility
-#RUN pip3 install rnodeconf
-#RUN apt install unzip
+# Build essentials
+RUN apt -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+
+# Install rust
+RUN apt -y install curl
+RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+ENV PATH="/root/.cargo/bin:$PATH"
+
+# Build/Install cryptography
+RUN pip3 install cryptography
 
 # Install Reticulum stack and NomadNet messenger application
-RUN pip3 install nomadnet
+RUN pip3 install rns lxmf nomadnet rnodeconf
 
 # Install personal helper tools
 RUN apt -y install mc
 
-# Expose port for Reticulum server TCP Interface (disable as default) 
+# Expose port for Reticulum server TCP Interface (disable as default)
 EXPOSE 4242
 
 # Launch Reticulum service if not specified otherwise
