Update container creation

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ NEXUS_CONTAINER_ALIAS=nexus-server_node01
 
 # Dockerfile to use for docker-compose build
 #NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
-NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm-v7
+#NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm-v7
 
 # Container configuration
 NEXUS_ROOT=/root
