Update container creation

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #
 # Environment used by docker-compose
 #
-# git clone https://github.com/HarlekinSimplex/nexus.git node01
+# git clone https://github.com/HarlekinSimplex/nexus.git nexus
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /root/nexus_server.py
 # docker exec -it nexus-server_node01 bash
 # docker exec -it nexus-server_node01 nomadnet
@@ -9,7 +9,7 @@
 #
 
 # Change path to match your local installation
-NEXUS_COMPOSE_HOME=~/bsb.nexus/node01
+NEXUS_COMPOSE_HOME=~/nexus
 NEXUS_CONTAINER=nexus-server_node01
 NEXUS_CONTAINER_ALIAS=nexus-server_node01
 
