--- a/.env
+++ b/.env
@@ -22,8 +22,10 @@ NEXUS_ROOT=/root
 NEXUS_ROOT_BIND=nexus_root
 NEXUS_NETWORK=nexus-server_net
 NEXUS_PORT_RNSAPI=4351
-NEXUS_PORT_WEB=127.0.0.1:4381
-NEXUS_PORT_JSONAPI=127.0.0.1:4341
+#NEXUS_PORT_WEB=127.0.0.1:4381
+NEXUS_PORT_WEB=4381
+#NEXUS_PORT_JSONAPI=127.0.0.1:4341
+NEXUS_PORT_JSONAPI=4341
 
 # Default server configuration
 NEXUS_CONFIG=
