Included nexus_web and nexus_messenger (Android APK) in repo

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@
 #
 # git clone https://github.com/HarlekinSimplex/nexus.git
 # docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus python3 /bsb/nexus_server/NexusServer.py
+# docker run --rm -it --name nexus-server_node01 -p 127.0.0.1:4341:4281 -v "$(pwd)"/nexus_root:/root bsbdock/nexus:dev_linux-amd64 python3 /bsb/nexus_server/NexusServer.py
 # docker exec -it nexus-server_node01 bash
 # docker exec -it nexus-server_node01 nomadnet
 # docker exec -it nexus-server_node01 python3 /bsb/nexus_server/NexusServer.py
