--- a/.env
+++ b/.env
@@ -26,12 +26,14 @@ NEXUS_PORT_RNSAPI=4351
 #NEXUS_PORT_WEB=127.0.0.1:4381
 NEXUS_PORT_WEB=4381
 #NEXUS_PORT_JSONAPI=127.0.0.1:4341
-NEXUS_PORT_JSONAPI=4341
+#>NEXUS_PORT_JSONAPI=4341
+NEXUS_PORT_JSONAPI=4344
 
 # Default server configuration
 NEXUS_CONFIG=
 NEXUS_PORT=4281
-NEXUS_ASPECT=server
+#>NEXUS_ASPECT=server
+NEXUS_ASPECT=dev
 NEXUS_ROLE={"c":"root"}
 NEXUS_LONGPOLL=
 NEXUS_TIMEOUT=
