Included nexus_web and nexus_messenger (Android APK) in repo

--- a/.env
+++ b/.env
@@ -11,8 +11,10 @@
 
 # Change path to match your local installation
 NEXUS_COMPOSE_HOME=~/nexus
-NEXUS_CONTAINER=nexus-server_node01
-NEXUS_CONTAINER_ALIAS=nexus-server_node01
+#>NEXUS_CONTAINER=nexus-server_node01
+NEXUS_CONTAINER=nexus-server_dev
+#>NEXUS_CONTAINER_ALIAS=nexus-server_node01
+NEXUS_CONTAINER_ALIAS=nexus-server_dev
 
 # Dockerfile to use for docker-compose build
 #NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
