--- a/.env
+++ b/.env
@@ -11,10 +11,8 @@
 
 # Change path to match your local installation
 NEXUS_COMPOSE_HOME=~/nexus
-#>NEXUS_CONTAINER=nexus-server_node01
-NEXUS_CONTAINER=nexus-server_dev
-#>NEXUS_CONTAINER_ALIAS=nexus-server_node01
-NEXUS_CONTAINER_ALIAS=nexus-server_dev
+NEXUS_CONTAINER=nexus-server_node01
+NEXUS_CONTAINER_ALIAS=nexus-server_node01
 
 # Dockerfile to use for docker-compose build
 #NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
@@ -25,17 +23,25 @@ NEXUS_ROOT=/root
 NEXUS_ROOT_BIND=nexus_root
 NEXUS_NETWORK=nexus-server_net
 NEXUS_PORT_RNSAPI=4351
-#NEXUS_PORT_WEB=127.0.0.1:4381
+NEXUS_PORT_WEB=127.0.0.1:4381
 NEXUS_PORT_WEB=4381
 #NEXUS_PORT_JSONAPI=127.0.0.1:4341
-#>NEXUS_PORT_JSONAPI=4341
-NEXUS_PORT_JSONAPI=4344
+NEXUS_PORT_JSONAPI=4341
 
 # Default server configuration
 NEXUS_CONFIG=
 NEXUS_PORT=4281
-#>NEXUS_ASPECT=server
-NEXUS_ASPECT=dev
+NEXUS_ASPECT=server
 NEXUS_ROLE={"c":"root"}
 NEXUS_LONGPOLL=
 NEXUS_TIMEOUT=
+
+# Development configuration
+NEXUS_CONTAINER=nexus-server_dev
+NEXUS_CONTAINER_ALIAS=nexus-server_dev
+NEXUS_PORT_RNSAPI=4354
+NEXUS_PORT_WEB=4384
+NEXUS_PORT_JSONAPI=4344
+NEXUS_ASPECT=dev
+NEXUS_LONGPOLL=60
+NEXUS_TIMEOUT=100000
