--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ NEXUS_CONTAINER=nexus-server_node01
 NEXUS_CONTAINER_ALIAS=nexus-server_node01
 
 # Dockerfile to use for docker-compose build
-#NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-amd64
-#NEXUS_DOCKERFILE=./Dockerfile_nexus1.0_linux-arm-v7
+#NEXUS_DOCKERFILE=./Dockerfile_nexus1.2.0_linux-amd64
+#NEXUS_DOCKERFILE=./Dockerfile_nexus1.2.0_linux-arm-v7
 
 # Container configuration
 NEXUS_ROOT=/root
@@ -37,11 +37,11 @@ NEXUS_LONGPOLL=
 NEXUS_TIMEOUT=
 
 # Development configuration
-NEXUS_CONTAINER=nexus-server_dev
-NEXUS_CONTAINER_ALIAS=nexus-server_dev
-NEXUS_PORT_RNSAPI=4354
-NEXUS_PORT_WEB=4384
-NEXUS_PORT_JSONAPI=4344
-NEXUS_ASPECT=dev
-NEXUS_LONGPOLL=60
-NEXUS_TIMEOUT=100000
+#NEXUS_CONTAINER=nexus-server_dev
+#NEXUS_CONTAINER_ALIAS=nexus-server_dev
+#NEXUS_PORT_RNSAPI=4354
+#NEXUS_PORT_WEB=4384
+#NEXUS_PORT_JSONAPI=4344
+#NEXUS_ASPECT=dev
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=100000
