New App and Web Client

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@
 
 # Change path to match your local installation
 NEXUS_COMPOSE_HOME=~/nexus
+NEXUS_IMAGE=bsbdock/nexus
 NEXUS_CONTAINER=nexus-server_node01
 NEXUS_CONTAINER_ALIAS=nexus-server_node01
 
@@ -37,6 +38,7 @@ NEXUS_LONGPOLL=
 NEXUS_TIMEOUT=
 
 # Development configuration
+#NEXUS_IMAGE=NEXUS_IMAGE=bsbdock/nexus:1.2.0_linux-amd64
 #NEXUS_CONTAINER=nexus-server_dev
 #NEXUS_CONTAINER_ALIAS=nexus-server_dev
 #NEXUS_PORT_RNSAPI=4354
