--- a/.env
+++ b/.env
@@ -16,8 +16,7 @@ NEXUS_CONTAINER=nexus-server_node01
 NEXUS_CONTAINER_ALIAS=nexus-server_node01
 
 # Dockerfile to use for docker-compose build
-#NEXUS_DOCKERFILE=./Dockerfile_nexus1.2.0_linux-amd64
-#NEXUS_DOCKERFILE=./Dockerfile_nexus1.2.0_linux-arm-v7
+#NEXUS_DOCKERFILE=./Dockerfile_nexus<version>_linux-amd64
 
 # Container configuration
 NEXUS_ROOT=/root
@@ -34,11 +33,10 @@ NEXUS_CONFIG=
 NEXUS_PORT=4281
 NEXUS_ASPECT=server
 NEXUS_ROLE={"c":"root"}
-NEXUS_LONGPOLL=
-NEXUS_TIMEOUT=
 
 # Development configuration
-#NEXUS_IMAGE=bsbdock/nexus:1.2.0_linux-amd64
+#NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #NEXUS_CONTAINER=nexus-server_dev
 #NEXUS_CONTAINER_ALIAS=nexus-server_dev
 #NEXUS_PORT_RNSAPI=4354
@@ -46,4 +44,6 @@ NEXUS_TIMEOUT=
 #NEXUS_PORT_JSONAPI=4344
 #NEXUS_ASPECT=dev
 #NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=100000
+#NEXUS_TIMEOUT=70
+#NEXUS_ROLE=
+#NEXUS_BRIDGE=
