Bridge function - Container creation .

--- a/.env
+++ b/.env
@@ -45,5 +45,5 @@ NEXUS_ROLE={"c":"root"}
 #NEXUS_ASPECT=dev
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
-#NEXUS_ROLE=
-#NEXUS_BRIDGE=
+#NEXUS_ROLE={"c":"root"}
+#NEXUS_BRIDGE=[]
