Bridge function - Reformat

--- a/bsbdock.nexus_context/Dockerfile_nexus1.3.0_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.3.0_linux-amd64
@@ -27,6 +27,9 @@ RUN apt -y install python3-pip
 # Install Reticulum stack and NomadNet messenger application
 RUN pip3 install rns lxmf nomadnet rnodeconf
 
+# Install additional python packages
+RUN pip3 install requests
+
 # Install personal helper tools
 RUN apt -y install mc
 
