--- a/bsbdock.nexus_context/Dockerfile_nexus1.3.0_linux-arm-v7
+++ b/bsbdock.nexus_context/Dockerfile_nexus1.3.0_linux-arm-v7
@@ -39,6 +39,9 @@ RUN pip3 install cryptography
 # Install Reticulum stack and NomadNet messenger application
 RUN pip3 install rns lxmf nomadnet rnodeconf
 
+# Install additional python packages
+RUN pip3 install requests
+
 # Install personal helper tools
 RUN apt -y install mc
 
