Bridge function - Bridge distro .

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       - ${NEXUS_PORT_WEB}:4280
       - ${NEXUS_PORT_JSONAPI}:4281
 ## Uncomment if you need the RNode LoRa usb interface mapped into the container
-#    devices:
-#      - "/dev/ttyACM0:/dev/ttyACM0"
+    devices:
+      - ${NEXUS_PORT_DEVICE}:/dev/ttyACM0
     env_file:
       - .env
     networks:
