--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ NEXUS_PORT_WEB=127.0.0.1:4381
 NEXUS_PORT_WEB=4381
 #NEXUS_PORT_JSONAPI=127.0.0.1:4341
 NEXUS_PORT_JSONAPI=4341
+NEXUS_RNODE_DEVICE=/dev/ttyACM0
 
 # Default server configuration
 NEXUS_CONFIG=
