--- a/.env
+++ b/.env
@@ -9,33 +9,33 @@
 # docker exec -it nexus-server_node01 python3 /bsb/nexus_server/NexusServer.py
 #
 
-# Change path to match your local installation
-NEXUS_COMPOSE_HOME=~/nexus
-NEXUS_IMAGE=bsbdock/nexus
-NEXUS_CONTAINER=nexus-server_node01
-NEXUS_CONTAINER_ALIAS=nexus-server_node01
+# Default nexus home on local filesystem
+#NEXUS_COMPOSE_HOME=~/nexus
 
-# Dockerfile to use for docker-compose build
-#NEXUS_DOCKERFILE=./Dockerfile_nexus<version>_linux-amd64
+# Default dockerfile used for docker-compose build
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_linux-arm-v7
 
-# Container configuration
-NEXUS_ROOT=/root
-NEXUS_ROOT_BIND=nexus_root
-NEXUS_NETWORK=nexus-server_net
-NEXUS_PORT_RNSAPI=4351
-NEXUS_PORT_WEB=127.0.0.1:4381
-NEXUS_PORT_WEB=4381
-#NEXUS_PORT_JSONAPI=127.0.0.1:4341
-NEXUS_PORT_JSONAPI=4341
-NEXUS_RNODE_DEVICE=/dev/ttyACM0
+# Default container configuration used in default docker-compose.yml
+#NEXUS_IMAGE=bsbdock/nexus
+#NEXUS_CONTAINER=nexus-server_node01
+#NEXUS_CONTAINER_ALIAS=nexus-server_node01
+#NEXUS_ROOT=/root
+#NEXUS_ROOT_BIND=nexus_root
+#NEXUS_NETWORK=nexus-server_net
+#NEXUS_PORT_RNSAPI=4351
+#NEXUS_PORT_WEB=127.0.0.1:4381
+#NEXUS_PORT_WEB=4381
+##NEXUS_PORT_JSONAPI=127.0.0.1:4341
+#NEXUS_PORT_JSONAPI=4341
+#NEXUS_RNODE_DEVICE=/dev/ttyACM0
 
 # Default server configuration
-NEXUS_CONFIG=
-NEXUS_PORT=4281
-NEXUS_ASPECT=server
-NEXUS_ROLE={"c":"root"}
+#NEXUS_CONFIG=
+#NEXUS_PORT=4281
+#NEXUS_ASPECT=server
+#NEXUS_ROLE={"c":"root"}
 
-# Development configuration
+# My non default development configuration
 #NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #NEXUS_CONTAINER=nexus-server_dev
