--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@
 #NEXUS_PORT_RNSAPI=4351
 #NEXUS_PORT_WEB=127.0.0.1:4381
 #NEXUS_PORT_WEB=4381
-##NEXUS_PORT_JSONAPI=127.0.0.1:4341
+#NEXUS_PORT_JSONAPI=127.0.0.1:4341
 #NEXUS_PORT_JSONAPI=4341
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
 
@@ -47,4 +47,4 @@
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"c":"root"}
-#NEXUS_BRIDGE=[]
+#NEXUS_BRIDGE=[{"url": "https://nexus.deltamatrix.org:8241", "tag": "server.deltamatrix"}]
